--- a/platformio.ini
+++ b/platformio.ini
@@ -4,12 +4,14 @@ board = genericSTM32F103C8
 framework = arduino
 upload_protocol = stlink
 debug_tool = stlink
+build_flags_cdc =
+    -DUSBCON
+    -DPIO_FRAMEWORK_ARDUINO_ENABLE_CDC
 
 # The idea here was to make a CDC version with debugging info
 # and an env to build as a HID joystick, but turns out it
 # isn't in the core so the feature isn't worth me implementing it
 [env:F103_serial]
 extends = env_common
-build_flags =
-    -DUSBCON
-    -DPIO_FRAMEWORK_ARDUINO_ENABLE_CDC
+build_flags = ${env_common.build_flags_cdc}
+    -DTARGET_BLUEPILL
