--- a/platformio.ini
+++ b/platformio.ini
@@ -15,3 +15,8 @@ build_flags_cdc =
 extends = env_common
 build_flags = ${env_common.build_flags_cdc}
     -DTARGET_BLUEPILL
+
+[env:CC3D]
+extends = env_common
+build_flags = ${env_common.build_flags_cdc}
+   -DTARGET_CC3D
