Added target for Purplepill / CJMCU1038 Board

--- a/platformio.ini
+++ b/platformio.ini
@@ -20,3 +20,8 @@ build_flags = ${env_common.build_flags_cdc}
 extends = env_common
 build_flags = ${env_common.build_flags_cdc}
    -DTARGET_CC3D
+
+[env:PURPLEPILL]
+extends = env_common
+build_flags = ${env_common.build_flags_cdc}
+   -DTARGET_PURPLEPILL
