Lock to ststm32 13.0, USBCDC not working on 14?

--- a/platformio.ini
+++ b/platformio.ini
@@ -1,5 +1,5 @@
 [env_common]
-platform = ststm32
+platform = ststm32@13.0.0
 board = genericSTM32F103C8
 framework = arduino
 upload_protocol = stlink
