add raspberrypi pico target

--- a/platformio.ini
+++ b/platformio.ini
@@ -7,6 +7,7 @@ debug_tool = stlink
 build_flags_cdc =
     -DUSBCON
     -DPIO_FRAMEWORK_ARDUINO_ENABLE_CDC
+    -DTARGET_STM
 
 # The idea here was to make a CDC version with debugging info
 # and an env to build as a HID joystick, but turns out it
@@ -25,3 +26,19 @@ build_flags = ${env_common.build_flags_cdc}
 extends = env_common
 build_flags = ${env_common.build_flags_cdc}
    -DTARGET_PURPLEPILL
+
+[env:PICO]
+platform = raspberrypi
+board = pico
+framework = arduino
+; monitor_port = /dev/cu.usbmodem14601
+; monitor_speed = 115200
+build_flags = 
+   -DTARGET_PICO
+   -DPWM_FREQ_HZ=300
+
+; [platformio]
+; default_envs = F103_serial
+; default_envs = CC3D
+; default_envs = PURPLEPILL
+; default_envs = PICO
