Added buildflag to disable motors with an armswitch on ch5

--- a/platformio.ini
+++ b/platformio.ini
@@ -25,3 +25,14 @@ build_flags = ${env_common.build_flags_cdc}
 extends = env_common
 build_flags = ${env_common.build_flags_cdc}
    -DTARGET_PURPLEPILL
+   
+   
+# The build flag ARMSWITCH expects a value of 2000 (armed) or 1000 (disarmed)
+# on channel 5. As long as the controller does not send the "armed" state,
+# all channels will receive the values specified in OUTPUT_FAILSAFE instead
+[env:F103_serial_armswitch]
+extends = env_common
+build_flags = ${env_common.build_flags_cdc}
+    -DTARGET_BLUEPILL
+    -DARMSWITCH
+
