Added warning to text

--- a/platformio.ini
+++ b/platformio.ini
@@ -29,7 +29,8 @@ build_flags = ${env_common.build_flags_cdc}
    
 # The build flag ARMSWITCH expects a value of 2000 (armed) or 1000 (disarmed)
 # on channel 5. As long as the controller does not send the "armed" state,
-# all channels will receive the values specified in OUTPUT_FAILSAFE instead
+# all channels will receive the values specified in OUTPUT_FAILSAFE instead.
+# Before using this option, make sure that your failsafe values are correct!
 [env:F103_serial_armswitch]
 extends = env_common
 build_flags = ${env_common.build_flags_cdc}
