--- a/platformio.ini
+++ b/platformio.ini
@@ -1,4 +1,4 @@
-[env_common]
+[env_common_stm32]
 platform = ststm32@13.0.0
 board = genericSTM32F103C8
 framework = arduino
@@ -7,21 +7,29 @@ debug_tool = stlink
 build_flags_cdc =
     -DUSBCON
     -DPIO_FRAMEWORK_ARDUINO_ENABLE_CDC
+lib_ignore = Servo_Pico
 
 # The idea here was to make a CDC version with debugging info
 # and an env to build as a HID joystick, but turns out it
 # isn't in the core so the feature isn't worth me implementing it
 [env:F103_serial]
-extends = env_common
-build_flags = ${env_common.build_flags_cdc}
+extends = env_common_stm32
+build_flags = ${env_common_stm32.build_flags_cdc}
     -DTARGET_BLUEPILL
 
 [env:CC3D]
-extends = env_common
-build_flags = ${env_common.build_flags_cdc}
+extends = env_common_stm32
+build_flags = ${env_common_stm32.build_flags_cdc}
    -DTARGET_CC3D
 
 [env:PURPLEPILL]
-extends = env_common
-build_flags = ${env_common.build_flags_cdc}
+extends = env_common_stm32
+build_flags = ${env_common_stm32.build_flags_cdc}
    -DTARGET_PURPLEPILL
+
+[env:pipico]
+#platform = raspberrypi
+platform = https://github.com/maxgerhardt/platform-raspberrypi.git
+board_build.core = earlephilhower
+board = pico
+framework = arduino
