--- a/platformio.ini
+++ b/platformio.ini
@@ -32,8 +32,7 @@ build_flags = ${env_common.build_flags_cdc}
 # all channels will receive the values specified in OUTPUT_FAILSAFE instead.
 # Before using this option, make sure that your failsafe values are correct!
 [env:F103_serial_armswitch]
-extends = env_common
-build_flags = ${env_common.build_flags_cdc}
-    -DTARGET_BLUEPILL
-    -DARMSWITCH
+extends = env:F103_serial
+build_flags = ${env:F103_serial.build_flags]
+  -DUSE_ARMSWITCH
 
