--- a/platformio.ini
+++ b/platformio.ini
@@ -33,6 +33,6 @@ build_flags = ${env_common.build_flags_cdc}
 # Before using this option, make sure that your failsafe values are correct!
 [env:F103_serial_armswitch]
 extends = env:F103_serial
-build_flags = ${env:F103_serial.build_flags]
+build_flags = ${env:F103_serial.build_flags}
   -DUSE_ARMSWITCH
 
