Add support for arm/disarm switch (#32)
* Added buildflag to disable motors with an armswitch on ch5

* Added warning to text

* Require at least 4 packets with arm signal, before actually arming

* Added arming feature to readme
Fixed spelling mistake

* Refactoring armswitch function
Renaming ARMSWITCH to USE_ARMSWITCH

Changes requested by maintainer

* Fixed typos

* Minor formatting

* Fix whitespace, arm condition

---------

Co-authored-by: Bryan Mayland <bmayland@capnbry.net>

--- a/platformio.ini
+++ b/platformio.ini
@@ -27,6 +27,15 @@ extends = env_common_stm32
 build_flags = ${env_common_stm32.build_flags_cdc}
    -DTARGET_PURPLEPILL
 
+# The build flag ARMSWITCH expects a value of 2000 (armed) or 1000 (disarmed)
+# on channel 5. As long as the controller does not send the "armed" state,
+# all channels will receive the values specified in OUTPUT_FAILSAFE instead.
+# Before using this option, make sure that your failsafe values are correct!
+[env:F103_serial_armswitch]
+extends = env:F103_serial
+build_flags = ${env:F103_serial.build_flags}
+  -DUSE_ARMSWITCH
+
 [env:pipico]
 #platform = raspberrypi
 platform = https://github.com/maxgerhardt/platform-raspberrypi.git
