Hide pipico target, requires windows long paths

--- a/platformio.ini
+++ b/platformio.ini
@@ -36,9 +36,8 @@ extends = env:F103_serial
 build_flags = ${env:F103_serial.build_flags}
   -DUSE_ARMSWITCH
 
-[env:pipico]
-#platform = raspberrypi
-platform = https://github.com/maxgerhardt/platform-raspberrypi.git
-board_build.core = earlephilhower
-board = pico
-framework = arduino
+; [env:pipico]
+; platform = https://github.com/maxgerhardt/platform-raspberrypi.git
+; board_build.core = earlephilhower
+; board = pico
+; framework = arduino
