Add telemetry example, new CRSF telemetry types * Adds RPM, Temperatures, Cells, Airspeed

--- a/platformio.ini
+++ b/platformio.ini
@@ -41,3 +41,10 @@ build_flags = ${env:F103_serial.build_flags}
 ; board_build.core = earlephilhower
 ; board = pico
 ; framework = arduino
+
+[env:example_telem_pico]
+platform = raspberrypi
+board = pico
+framework = arduino
+monitor_speed = 115200
+build_src_filter = +<../lib/CrsfSerial/examples/telemetry/>
